# kangaroo_robot

kangaroo_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
kangaroo_bringup/config/: approach_planner.yaml  arms_4dof_no_pelvis_planner.yaml  arms_box_1.yaml  arms_box_2.yaml  arms_dance.yaml  arms_flying.yaml  arms_home.yaml  arms_running.yaml  full_7dof_gripper_planner.yaml  joy_teleop.yaml  kangaroo_7dof_automatica.yaml  kangaroo_7dof_new_motions.yaml  kangaroo_automatica.yaml  kangaroo_common_hardware.yaml  kangaroo_common_hardware_with_ft.yaml  kangaroo_erf_3.yaml  kangaroo_homing.yaml  kangaroo_motions.yaml  kangaroo_new_motions.yaml  left_wave.yaml  lowerbody_planner.yaml  pelvis_no_arms_planner.yaml
kangaroo_bringup/config/motion_planner/: motion_planner_7dof_no-end-effector.yaml
kangaroo_bringup/config/motions/: kangaroo_motions_7dof_no-end-effector.yaml  migrate_motions.py  ros1_kangaroo_motions_7dof_no-gripper.yaml
kangaroo_bringup/config/sensors/: imu.yaml  sensors.yaml
kangaroo_bringup/launch/: joystick_teleop.launch  kangaroo.launch  kangaroo_bringup.launch  kangaroo_bringup.launch.py  kangaroo_playmotion2.launch.py  kangaroo_preload_libraries.launch  play_motion.launch  twist_mux.launch
kangaroo_bringup/module/: play_motion2.yaml
kangaroo_bringup/scripts/: regen_em_file.py
kangaroo_cartesio_config/: cartesian_controller.launch  kangaroo.srdf  kangaroo.stack  kangaroo_basic.yaml  kangaroo_cartesian.stack  kangaroo_cartesio.urdf.xacro  package.xml
kangaroo_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
kangaroo_controller_configuration/config/: actuator_4dof_pid_gains.yaml  actuator_7dof_gripper_pid_gains.yaml  actuator_7dof_pid_gains.yaml  actuator_pid_gains.yaml  default_safety_parameters.yaml  gravity_compensation.yaml  leg_controller.yaml  leg_effort_controller.yaml  leg_position_controller.yaml  pelvis_controller.yaml  pids.yaml  pids_contact.yaml  pids_contact_prismatic.yaml  pids_prismatic.yaml  transmission_parameters.yaml  walking_controller.yaml  walking_params.yaml  walking_specific_offsets.yaml
kangaroo_controller_configuration/config/arm_controllers/: arm_4dof_controller.yaml  arm_5dof_controller.yaml  arm_7dof_controller.yaml  sea_4dof_state_broadcaster.yaml  sea_5dof_state_broadcaster.yaml  sea_7dof_state_broadcaster.yaml
kangaroo_controller_configuration/config/current/: ankle_left.yaml  ankle_right.yaml  hipxy_left.yaml  hipxy_right.yaml  hipz_left.yaml  hipz_right.yaml  leg_length_left.yaml  leg_length_right.yaml
kangaroo_controller_configuration/config/joint_trajectory_controllers/: leg_left.yaml  leg_left_prismatic.yaml  leg_right.yaml  leg_right_prismatic.yaml
kangaroo_controller_configuration/config/local_joint_control/: 1
kangaroo_controller_configuration/config/position/: ankle_left.yaml  ankle_right.yaml  hipxy_left.yaml  hipxy_right.yaml  hipz_left.yaml  hipz_right.yaml  leg_length_left.yaml  leg_length_right.yaml
kangaroo_controller_configuration/launch/: arm_controller.launch.py  bringup_controllers.launch  bringup_controllers_hardware.launch  broadcasters.launch.py  current_controllers.launch  default_controllers.launch  default_controllers.launch.py  direct_current_controller.launch  direct_effort_controllers.launch.py  direct_position_controller.launch  gravity_compensation_controller.launch  gravity_compensation_legs_controller.launch  joint_state_controller.launch  launcher.launch  leg_controller.launch.py  position_controllers.launch  selective_rosparam_loader.launch  walking_controller.launch
kangaroo_controller_configuration/launch/local_joint_control/: arm_left.launch  arm_left_7dof.launch  arm_right.launch  arm_right_7dof.launch  launcher.launch  leg_left.launch  leg_left_force_control.launch  leg_right.launch  leg_right_force_control.launch  legs_impedance_control.launch  pelvis.launch  torso.launch
kangaroo_controller_configuration/module/: 20_default_broadcasters.yaml
kangaroo_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
kangaroo_description/config/: collision_parameters.yaml  default_configuration_locomotion.yaml  home_position.yaml  kangaroo_configuration.yaml  rviz.rviz
kangaroo_description/gazebo/: gazebo.urdf.xacro
kangaroo_description/kangaroo_description/: kangaroo_launch_utils.py  launch_arguments.py
kangaroo_description/launch/: display.launch  gazebo.launch  robot_state_publisher.launch.py  show.launch.py
kangaroo_description/meshes/: arm_right_4_link.stl  base_link.stl  base_link_convex_hull.stl  leg_1_link.stl  leg_2_link.stl  leg_3_link.stl  leg_4_collision_link.stl  leg_4_link.stl  leg_5_collision_link.stl  leg_5_link.stl  leg_5_link_v2.stl  leg_6_link.stl  leg_7_link.stl  leg_7_link_ft.stl  torso_link.stl
kangaroo_description/meshes/2022/: base_link.stl  base_link_with_cage.stl
kangaroo_description/meshes/2023/: base_link_convex.stl  leg_1_link.stl  torso_link_convex (copy).stl
kangaroo_description/module/: 10_robot_state_publisher.yaml
kangaroo_description/mujoco/: mj_tags.xacro
kangaroo_description/robots/: kangaroo.urdf  kangaroo.urdf.xacro  show.launch  upload.launch
kangaroo_description/ros2_control/: joint.ros2_control.xacro  mimic_joint.ros2_control.xacro  passive_joint.ros2_control.xacro  ros2_control.urdf.xacro  transmissions.urdf.xacro
kangaroo_description/scripts/: homing  robot_type
kangaroo_description/src/: parameter_blackboard.cpp
kangaroo_description/test/: CMakeLists.txt  test_model_load.test
kangaroo_description/urdf/: calibration_constants.urdf.xacro  collision.xacro  materials.urdf.xacro
kangaroo_description/urdf/ankle/: ankle.transmission.xacro  ankle.urdf.xacro  ankle_2022.urdf.xacro  ankle_2023.urdf.xacro  foot_frames.urdf.xacro
kangaroo_description/worlds/: kangaroo.world
kangaroo_mj_description/: CHANGELOG.rst  CMakeLists.txt  README.md  meshes  package.xml
kangaroo_mj_description/xml/: common.xml  kangaroo.xml  kangaroo_fixed_base.xml  scene.xml
kangaroo_mujoco/: CMakeLists.txt  README.md  package.xml
kangaroo_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+126 files in other folders)
