<?xml version="1.0"?>
<package format="2">
  <name>kangaroo_bringup</name>
  <version>0.0.27</version>
  <description>The kangaroo_bringup package</description>

  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>

  <license>PAL Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>kangaroo_controller_configuration</exec_depend>
  <exec_depend>kangaroo_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>play_motion</exec_depend>
  <exec_depend>kangaroo_moveit_config</exec_depend>

  <export>
  </export>

</package>
