<?xml version="1.0"?>
<package format="2">
  <name>kangaroo_controller_configuration</name>
  <version>0.1.18</version>
  <description>The kangaroo_controller_configuration package</description>

  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>

  <license>PAL Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>imu_sensor_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>walking_controller</exec_depend>
  <exec_depend>walking_utils</exec_depend>
  <exec_depend>head_action</exec_depend>
  <exec_depend>current_limit_controller</exec_depend>
  <exec_depend>actuator_pid_controllers</exec_depend>
  <exec_depend>ft_sensor_estimator</exec_depend>
  <exec_depend>force_torque_sensor_controller</exec_depend>
  <exec_depend>introspection_controller</exec_depend>
  <exec_depend>joint_torque_sensor_state_controller</exec_depend>
  <exec_depend>temperature_sensor_controller</exec_depend>
  <exec_depend>mode_state_controller</exec_depend>

  <export>
  </export>

</package>
