<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kangaroo_controller_configuration</name>
  <version>2.0.0</version>
  <description>The kangaroo_controller_configuration package</description>
  <maintainer email="sergi.acosta@pal-robotics.com">Sergi de las Muelas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pal</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
