<?xml version="1.0"?>
<package format="2">
  <name>kangaroo_description</name>
  <version>0.0.28</version>
  <description>The kangaroo_description package</description>

  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>

  <license>PAL Propietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>imu_sensor_controller</exec_depend>
  <exec_depend>force_torque_sensor_controller</exec_depend>
  <exec_depend>kangaroo_transmissions</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>urdf_test</test_depend>

  <export>
  </export>

</package>
