<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kangaroo_description</name>
  <version>2.0.1</version>
  <description>The kangaroo_description package</description>
  <maintainer email="sergi.acosta@pal-robotics.com">Sergi de las Muelas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  
  <exec_depend>xacro</exec_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>launch_param_builder</exec_depend>
  <exec_depend>kangaroo_controller_configuration</exec_depend>
  <exec_depend>pal_urdf_utils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>urdf_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
