<?xml version="1.0"?>
<package format="2">
  <name>kangaroo_mj_description</name>
  <version>0.1.7</version>
  <description>The kangaroo_mj_description package</description>

  <maintainer email="enrico.mingo@pal-robotics.com">Enrico Mingo Hoffman</maintainer>
  <author email="enrico.mingo@pal-robotics.com">Enrico Mingo Hoffman</author>

  <license>PAL Propietary</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
