<?xml version="1.0"?>
<package format="3">
  <name>kangaroo_robot</name>
  <version>2.0.1</version>
  <description>The kangaroo_robot package</description>

  <maintainer email="sergi.acosta@pal-robotics.com">Sergi de las Muelas</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kangaroo_description</exec_depend>
  <exec_depend>kangaroo_bringup</exec_depend>
  <exec_depend>kangaroo_controller_configuration</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
