find_package(rostest REQUIRED)
foreach(simulation true false)
    foreach(fixed_base true false)
        foreach(enable_crane true false)
            add_rostest(test_model_load.test ARGS simulation:=${simulation} fixed_base:=${fixed_base} enable_crane:=${enable_crane})
        endforeach(enable_crane)
    endforeach(fixed_base)
endforeach(simulation)
