find_package(rostest REQUIRED)
foreach(simulation true false)
    foreach(fixed_base true false)
        foreach(enable_crane true false)
            foreach(use_mimic true false)
                foreach(ft_sensors true false)
                    foreach(with_pelvis true false)
                        foreach(with_arms true false)
                add_rostest(test_model_load.test ARGS simulation:=${simulation} fixed_base:=${fixed_base} enable_crane:=${enable_crane} use_mimic:=${use_mimic} ft_sensors:=${ft_sensors} with_pelvis:=${with_pelvis} with_arms:=${with_arms})
                        endforeach(with_arms)
                    endforeach(with_pelvis)
                endforeach(ft_sensors)
            endforeach(use_mimic)
        endforeach(enable_crane)
    endforeach(fixed_base)
endforeach(simulation)
